// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatekeeper/OauthLogin renders correct links for Authorization code-authorization grant flow: Authorization code authorization grant 1`] = `
<a
  className="gatekeeper-btn"
  href="https://stage-api.ona.io/o/authorize/?client_id=hunter2&redirect_uri=https%3A%2F%2Fexample.com%2Foauth%2Fcallback%2Fonadata%2F&scope=read%20write&response_type=code&state=abc"
>
  onadata
</a>
`;

exports[`gatekeeper/OauthLogin renders correct links for implicit authorization grant flow: implicit authorization grant 1`] = `
<a
  className="gatekeeper-btn"
  href="https://stage-api.ona.io/o/authorize/?client_id=hunter2&redirect_uri=https%3A%2F%2Fexample.com%2Foauth%2Fcallback%2Fonadata%2F&scope=read%20write&response_type=token&state=abc"
>
  onadata
</a>
`;

exports[`gatekeeper/OauthLogin renders correctly with custom ProviderLinksComponent: custom provider link 1`] = `
<div
  className="danger"
>
  <p
    className="closed"
  >
    oops!
  </p>
</div>
`;

exports[`gatekeeper/OauthLogin renders correctly with no ProviderLinksComponent 1`] = `
<div
  className="gatekeeper-login"
>
  <p
    className="gatekeeper-p"
  >
    Please log in with one of the following providers
  </p>
  <p
    className="gatekeeper-p item"
    key="onadata"
  >
    <a
      className="gatekeeper-btn"
      href="https://stage-api.ona.io/o/authorize/?client_id=hunter2&redirect_uri=https%3A%2F%2Fexample.com%2Foauth%2Fcallback%2Fonadata%2F&scope=read%20write&response_type=token&state=abc"
    >
      onadata
    </a>
  </p>
</div>
`;
